--- a/Team-up-front/src/modules/MainContent.module.scss
+++ b/Team-up-front/src/modules/MainContent.module.scss
@@ -1,17 +1,88 @@
 .main-content {
   display: flex;
-  padding: 50px 40px 50px 70px;
+  padding: 50px 40px 50px 40px;
   justify-content: space-between;
   align-items: center;
+
+  @media (max-width: 1024px) {
+    padding: 40px 20px 40px 20px;
+    width: 1024px !important;
+    margin: 0 auto;
+    flex-direction: column;
+  }
+
+  @media (max-width: 992px) {
+    padding: 40px 20px 40px 20px;
+    width: 992px !important;
+    margin: 0 auto;
+    flex-direction: column;
+  }
+
+  @media (max-width: 768px) {
+    padding: 40px 20px 40px 20px;
+    width: 768px !important;
+    margin: 0 auto;
+    flex-direction: column;
+  }
+
+  @media (max-width: 576px) {
+    padding: 40px 20px 40px 20px;
+    width: 576px !important;
+    margin: 0 auto;
+    flex-direction: column;
+  }
+
+  @media (max-width: 490px) {
+    padding: 40px 20px 40px 20px;
+    width: 490px !important;
+    margin: 0 auto;
+    flex-direction: column;
+  }
+
+  @media (max-width: 470px) {
+    padding: 40px 20px 40px 20px;
+    width: 470px !important;
+    margin: 0 auto;
+    flex-direction: column;
+  }
+
+  @media (max-width: 430px) {
+    padding: 40px 20px 40px 20px;
+    width: 430px !important;
+    margin: 0 auto;
+    flex-direction: column;
+  }
+  @media (max-width: 365px) {
+    padding: 40px 20px 40px 20px;
+    width: 365px !important;
+    margin: 0 auto;
+    flex-direction: column;
+  }
+
 
   .left-side {
     width: 600px;
     height: 50vh;
     display: grid;
-    //gap: 0px;
+
+    @media (max-width: 1024px) {
+      width: 420px;
+      height: 45vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      gap: 40px;
+    }
 
     .main-title {
       font-size: 2.5rem;
+
+      @media (max-width: 1024px) {
+        font-size: 1.7rem;
+        width: 420px;
+      }
 
       mark {
         background-color: #547792;
@@ -21,9 +92,19 @@
       }
     }
 
+    p {
+      @media (max-width: 1024px) {
+        width: 420px;
+      }
+    }
+
     .result-side {
       display: flex;
       gap: 50px;
+
+      @media (max-width: 1024px) {
+        gap: 20px;
+      }
 
       div {
         background-color: #547792;
@@ -36,6 +117,20 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+
+        @media (max-width: 1024px) {
+          width: 12.5dvh;
+          font-size: 12px;
+          color: white;
+        }
+
+        p {
+          @media (max-width: 1024px) {
+            width: 12.5dvh;
+            font-size: 12px;
+            transform: translate(7px, 0);
+          }
+        }
       }
     }
   }
@@ -43,9 +138,20 @@
   .right-side {
     width: 89dvh;
 
+    @media (max-width: 1024px) {
+      width: 1024px !important;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
     img {
       width: 89dvh;
       border-radius: 10px;
+
+      @media (max-width: 1024px) {
+        width: 42dvh;
+      }
     }
   }
 }
