--- a/Team-up-front/src/modules/Requests/Request.module.scss
+++ b/Team-up-front/src/modules/Requests/Request.module.scss
@@ -86,7 +86,7 @@
       flex: 2;
 
       h4 {
-        color: #4318d1;
+        color: #222831;
         font-size: 1.2rem;
         font-weight: 500;
         margin: 0;
@@ -120,12 +120,12 @@
       }
 
       .accept-btn {
-        background-color: #efd135;
+        background-color: #333446;
         color: white;
-        border: 2px solid #e6cd53;
+        border: 2px solid #333446;
 
         &:hover {
-          background-color: #bda21d;
+          background-color: #7F8CAA;
         }
       }
 
